# Python-Learn-Gamble

./: MiniGame.py  README.md  learn.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  update-release.yml
Python-Luck-Room-V1/: LuckRoom.py  __init__.py  pyproject.toml  setup.py
luck_room_v1/: LuckRoom.py  README.md  pyproject.toml
luckroom./: README.md
mainGame/: GambleGame.py
miniGame/: MiniGame.py
miniGame/__init__.py/: LuckRoom.py
