[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "luckroom"
version = "0.1.0"
description = "A simple luck based game."
authors = [
    { name="Braeden Sy Tan", email="Braedenjairsytan@icloud.com" }
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
dependencies = []

[project.urls]
"Homepage" = "https://github.com/DuckyBoi-XD/Python-Learn-Gamble"
