[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Luck-Room-v1"
version = "0.1.0"
description = "A simple luck based game."
authors = [
    { name="Braeden Sy Tan", email="braedenjairsytan@icloud.com" }
]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.7"
dependencies = []
scripts = { luckroom = "LuckRoom:main" }

[project.urls]
"Homepage" = "https://github.com/DuckyBoi-XD/Python-Learn-Gamble"
